# doxastica

./: .cliff.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOP.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.doc-writer/: config.yaml  context.md  editor-report.md  gap-report.md  page-inventory.md  persona-report-python-developers-integrating-doxastica-into-a-larger-system-e-g-nvm.md  scenarios.yaml  terminology.yaml
.doc-writer/.originals/: mkdocs-material.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docs.yml  pr.yml  quality.yml  release.yml  weekly.yml
.planning/: DEMO.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/debug/: ladybug-cycle-traverse-oom.md
.planning/debug/resolved/: ladybug-cycle-traverse-oom.md
.planning/features/: FEAT-001-stance-r21.md
.planning/milestones/: v0.1.0-MILESTONE-AUDIT.md  v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md  v0.2.0-MILESTONE-AUDIT.md  v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md
.planning/phases/01-protocol-backend-port-data-model-decisions/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-backend-adapters-schema-bootstrap-de-risking-spike/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-SECURITY.md  02-VALIDATION.md  02-VERIFICATION.md  deferred-items.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-doxastica-demo-tui.md  SEED-002-release-version-bump-step.md
docs/: backend-contract.md  changelog.md
docs/scripts/: gen_ref_pages.py
docs/src/: backend-contract.md  index.md
docs/src/how-to/: index.md  (+7 more)
src/doxastica/: __init__.py  core.py  errors.py  factories.py  models.py  ports.py  protocol.py
tests/: conftest.py  test_backend_ladybug.py  test_backend_memory.py  test_backend_parity.py  test_cascade.py  test_doxastica.py  test_import_purity.py  test_invariants.py  test_irony_join.py  test_models_frozen.py  test_port_distinct.py  test_query_scope.py  test_recovery_xfail.py  test_revision_spine.py  test_scope_at.py  test_stance.py  test_stance_persistence.py
(+130 files in other folders)
