[project]
name = "doxastica"
version = "0.2.0"
description = "Graph-native AGM belief-revision core (Kumiho M0)"
readme = "README.md"
authors = [
    { name = "Anentropic", email = "ego@anentropic.com" }
]
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["belief-revision", "agm", "kumiho", "graph", "epistemic", "memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.11,<3",
]

[project.urls]
Homepage = "https://github.com/anentropic/doxastica"
Documentation = "https://anentropic.github.io/doxastica/"
Repository = "https://github.com/anentropic/doxastica"

[project.optional-dependencies]
# D-03 (Option B): pydantic is the sole REQUIRED runtime dep; ladybug is the
# reference-backend extra behind the Phase-1 BackendPort seam. `pip install doxastica`
# yields a working in-memory AGM core with zero ladybug install; `[ladybug]` adds the
# reference backend.
ladybug = ["ladybug>=0.17,<0.18"]
all = ["doxastica[ladybug]"]
# future backends slot in here as extras, e.g. neo4j = [...], surrealdb = [...]

[build-system]
requires = ["uv_build>=0.9.18,<1.0.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "hypothesis>=6.155",
    "ipython>=9.10.0",
    "pdbpp>=0.12.0.post1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportPrivateUsage = false

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "D"]
ignore = [
    "D1",    # don't require docstrings everywhere
    "D202",  # allow blank line after docstring (common in tests)
    "D203",  # conflicts with D211 (no blank line before class docstring)
    "D212",  # conflicts with D213 (multiline summary on second line)
    "D401",  # imperative mood is awkward for dunder methods
    "D413",  # blank line after last section not required
]

[tool.pytest.ini_options]
addopts = "-v"
